Couple of fixes to improve visibility

--- a/cvat-ui/src/components/annotation-page/styles.scss
+++ b/cvat-ui/src/components/annotation-page/styles.scss
@@ -170,10 +170,14 @@
 
     > .cvat-job-info-statistics {
         > div {
-            width: 100%;
-
             > span {
                 font-size: 20px;
+            }
+
+            .ant-table-thead {
+                > tr > th {
+                    padding: 5px 5px;
+                }
             }
         }
     }
